// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sidebar Component renders correctly when user is authenticated 1`] = `
<DocumentFragment>
  <div
    class="MuiBox-root css-1kfzhxo"
  >
    <div
      class="MuiBox-root css-1yjvs5a"
    >
      <h5
        class="MuiTypography-root MuiTypography-h5 css-1yej70y-MuiTypography-root"
      >
        CoinStats
      </h5>
    </div>
    <ul
      class="MuiList-root MuiList-padding css-1u169s7-MuiList-root"
    >
      <a
        class="MuiListItem-root MuiListItem-gutters MuiListItem-padding css-1qa1mqp-MuiListItem-root"
        href="/transaction-history"
      >
        <div
          class="MuiListItemIcon-root css-cveggr-MuiListItemIcon-root"
        >
          <svg
            fill="none"
            height="1em"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <line
              x1="12"
              x2="12"
              y1="1"
              y2="23"
            />
            <path
              d="M17 5H9.5a3.5 3.5 0 0 0 0 7h5a3.5 3.5 0 0 1 0 7H6"
            />
          </svg>
        </div>
        <div
          class="MuiListItemText-root css-1y2w5y4-MuiListItemText-root"
        >
          <span
            class="MuiTypography-root MuiTypography-body1 MuiListItemText-primary css-1edfpdg-MuiTypography-root"
          >
            Transaction History
          </span>
        </div>
      </a>
      <a
        class="MuiListItem-root MuiListItem-gutters MuiListItem-padding css-1qa1mqp-MuiListItem-root"
        href="/add-transaction"
      >
        <div
          class="MuiListItemIcon-root css-cveggr-MuiListItemIcon-root"
        >
          <svg
            fill="none"
            height="1em"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <line
              x1="12"
              x2="12"
              y1="1"
              y2="23"
            />
            <path
              d="M17 5H9.5a3.5 3.5 0 0 0 0 7h5a3.5 3.5 0 0 1 0 7H6"
            />
          </svg>
        </div>
        <div
          class="MuiListItemText-root css-1y2w5y4-MuiListItemText-root"
        >
          <span
            class="MuiTypography-root MuiTypography-body1 MuiListItemText-primary css-1edfpdg-MuiTypography-root"
          >
            Add Transaction
          </span>
        </div>
      </a>
      <li
        class="MuiListItem-root MuiListItem-gutters MuiListItem-padding css-193q0wg-MuiListItem-root"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textInherit MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorInherit MuiButton-root MuiButton-text MuiButton-textInherit MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorInherit css-18ulbdb-MuiButtonBase-root-MuiButton-root"
          tabindex="0"
          type="button"
        >
          Logout
        </button>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`Sidebar Component renders correctly when user is not authenticated 1`] = `
<DocumentFragment>
  <div
    class="MuiBox-root css-1kfzhxo"
  >
    <div
      class="MuiBox-root css-1yjvs5a"
    >
      <h5
        class="MuiTypography-root MuiTypography-h5 css-1yej70y-MuiTypography-root"
      >
        CoinStats
      </h5>
    </div>
    <ul
      class="MuiList-root MuiList-padding css-1u169s7-MuiList-root"
    >
      <a
        class="MuiListItem-root MuiListItem-gutters MuiListItem-padding css-1qa1mqp-MuiListItem-root"
        href="/transaction-history"
      >
        <div
          class="MuiListItemIcon-root css-cveggr-MuiListItemIcon-root"
        >
          <svg
            fill="none"
            height="1em"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <line
              x1="12"
              x2="12"
              y1="1"
              y2="23"
            />
            <path
              d="M17 5H9.5a3.5 3.5 0 0 0 0 7h5a3.5 3.5 0 0 1 0 7H6"
            />
          </svg>
        </div>
        <div
          class="MuiListItemText-root css-1y2w5y4-MuiListItemText-root"
        >
          <span
            class="MuiTypography-root MuiTypography-body1 MuiListItemText-primary css-1edfpdg-MuiTypography-root"
          >
            Transaction History
          </span>
        </div>
      </a>
      <a
        class="MuiListItem-root MuiListItem-gutters MuiListItem-padding css-1qa1mqp-MuiListItem-root"
        href="/add-transaction"
      >
        <div
          class="MuiListItemIcon-root css-cveggr-MuiListItemIcon-root"
        >
          <svg
            fill="none"
            height="1em"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <line
              x1="12"
              x2="12"
              y1="1"
              y2="23"
            />
            <path
              d="M17 5H9.5a3.5 3.5 0 0 0 0 7h5a3.5 3.5 0 0 1 0 7H6"
            />
          </svg>
        </div>
        <div
          class="MuiListItemText-root css-1y2w5y4-MuiListItemText-root"
        >
          <span
            class="MuiTypography-root MuiTypography-body1 MuiListItemText-primary css-1edfpdg-MuiTypography-root"
          >
            Add Transaction
          </span>
        </div>
      </a>
      <li
        class="MuiListItem-root MuiListItem-gutters MuiListItem-padding css-193q0wg-MuiListItem-root"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textInherit MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorInherit MuiButton-root MuiButton-text MuiButton-textInherit MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorInherit css-18ulbdb-MuiButtonBase-root-MuiButton-root"
          tabindex="0"
          type="button"
        >
          Login
        </button>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;
